--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+
 <html lang="en">
 
   <head>
@@ -18,14 +19,12 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;400;500&family=Open+Sans:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;400;500&family=Open+Sans:wght@300;400;500&display=swap" rel="stylesheet">
 
   </head>
 
   <body>
-
     <app-root></app-root>
-
   </body>
 
 </html>
